@@ -39,7 +39,6 @@ export(delayedAsyncAssign)
 export(delete)
 export(error)
 export(finished)
-export(getGlobals)
 export(inspect)
 export(inspectAll)
 export(status)
@@ -73,6 +72,7 @@ importFrom(R.utils,mstr)
 importFrom(R.utils,printf)
 importFrom(R.utils,tempvar)
 importFrom(R.utils,use)
+importFrom(globals,getGlobals)
 importFrom(listenv,get_variable)
 importFrom(listenv,listenv)
 importFrom(parallel,detectCores)
